--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^3.2.11",
     "axios": "^0.24.0",
+    "firebase": "^8.10.0",
     "run-sdk": "^0.6.34",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
